--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,12 +12,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    # Step 1: Check out the code
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    # Step 2: Set up CMake
+    - name: Set up CMake
+      uses: jwlawson/actions-setup-cmake@v1.11
+
+    # Step 3: Install required tools
+    - name: Install build essentials
+      run: sudo apt-get update && sudo apt-get install -y build-essential
+
+    # Step 4: Configure CMake
+    - name: Configure CMake
+      run: |
+        mkdir build
+        cd build
+        cmake ..
+
+    # Step 5: Build the project
+    - name: Build project
+      run: |
+        cd build
+        cmake --build .
+
+    # Step 6: Run tests (if applicable)
+    - name: Run tests
+      run: |
+        cd build
+        ctest --output-on-failure
