--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,43 +2,42 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master", "ajmal-side"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master", "ajmal-side"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Check out the code
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      # Step 1: Check out the code
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    # Step 2: Set up CMake
-    - name: Set up CMake
-      uses: jwlawson/actions-setup-cmake@v1.11
+      # Step 2: Set up CMake
+      - name: Set up CMake
+        uses: jwlawson/actions-setup-cmake@v1.11
 
-    # Step 3: Install required tools
-    - name: Install build essentials
-      run: sudo apt-get update && sudo apt-get install -y build-essential
+      # Step 3: Install required tools
+      - name: Install build essentials
+        run: sudo apt-get update && sudo apt-get install -y build-essential
 
-    # Step 4: Configure CMake
-    - name: Configure CMake
-      run: |
-        mkdir build
-        cd build
-        cmake ..
+      # Step 4: Configure CMake
+      - name: Configure CMake
+        run: |
+          mkdir build
+          cd build
+          cmake ..
 
-    # Step 5: Build the project
-    - name: Build project
-      run: |
-        cd build
-        cmake --build .
+      # Step 5: Build the project
+      - name: Build project
+        run: |
+          cd build
+          cmake --build .
 
-    # Step 6: Run tests (if applicable)
-    - name: Run tests
-      run: |
-        cd build
-        ctest --output-on-failure
+      # Step 6: Run tests (if applicable)
+      - name: Run tests
+        run: |
+          cd build
+          ctest --output-on-failure
