added:reset_password

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "xstring": "cpp",
     "iostream": "cpp",
-    "ctime": "cpp"
+    "ctime": "cpp",
+    "ostream": "cpp"
   }
 }
